feat: inelastic collision

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,14 +11,14 @@
                 "-L${workspaceFolder}/lib",
                 "${workspaceFolder}/src/main.cpp",
                 "${workspaceFolder}/src/glad.c",
-                "${workspaceFolder}/src/methods/Particle.cpp",
-                "${workspaceFolder}/src/methods/Particle.h",
-                "${workspaceFolder}/src/methods/BaseSimMethod.cpp",
-                "${workspaceFolder}/src/methods/BaseSimMethod.h",
-                "${workspaceFolder}/src/methods/NaivePairwise.cpp",
-                "${workspaceFolder}/src/methods/NaivePairwise.h",
-                "${workspaceFolder}/src/methods/VerletPairwise.cpp",
-                "${workspaceFolder}/src/methods/VerletPairwise.h",
+                "${workspaceFolder}/src/simulator/Particle.cpp",
+                "${workspaceFolder}/src/simulator/Particle.h",
+                "${workspaceFolder}/src/simulator/BaseSimMethod.cpp",
+                "${workspaceFolder}/src/simulator/BaseSimMethod.h",
+                "${workspaceFolder}/src/simulator/NaivePairwise.cpp",
+                "${workspaceFolder}/src/simulator/NaivePairwise.h",
+                "${workspaceFolder}/src/simulator/VerletPairwise.cpp",
+                "${workspaceFolder}/src/simulator/VerletPairwise.h",
                 "-lglfw3dll",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
